--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
+    <h1>CALCULAR</h1>
+    <input type="text" id="numero1" placeholder=" ingrese numero1" >
+    <input type="text" id="numero2" placeholder=" ingrese numero2" >
+    <input type="text" id="numero3" placeholder=" ingrese numero3" >
+
+    <button onclick="sumar()">sumar</button>
+    <button onclick="restar()">restar</button>
+    <button onclick="multiplicar()">multiplicar</button>
+    <button onclick="dividir()">dividir</button>
+
+    <input type="text"  id="resul">
     
     <script src="app.js"></script>
 </body>
